--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Professional legal advocacy services - Expert legal representation and consultation">
     <title>Legal Advocate - Professional Legal Services</title>
     <link rel="stylesheet" href="style.css">
+    <!-- EmailJS for contact form -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body>
     <!-- Header Navigation -->
