--- a/index.html
+++ b/index.html
@@ -45,27 +45,42 @@
         <!-- Hero Section -->
         <section id="home" class="hero" aria-labelledby="hero-heading">
             <div class="hero-overlay"></div>
-            <div class="hero-content">
-                <div class="hero-badge">Experienced Legal Advocate</div>
-                <h1 id="hero-heading" class="hero-name">Dileep Tiwari</h1>
-                <p class="hero-tagline">Fighting for Your Rights with Uncompromising Legal Excellence</p>
-                <p class="hero-subtitle">Protecting your interests with strategic advocacy, proven expertise, and unwavering dedication to justice</p>
-                <div class="hero-cta">
-                    <a href="#contact" class="btn btn-primary btn-large">Book Consultation</a>
-                    <a href="#practice-areas" class="btn btn-secondary">View Practice Areas</a>
-                </div>
-                <div class="hero-stats">
-                    <div class="hero-stat">
-                        <span class="stat-number">500+</span>
-                        <span class="stat-label">Cases Won</span>
+            <div class="container">
+                <div class="hero-wrapper">
+                    <div class="hero-content">
+                        <div class="hero-badge">Experienced Legal Advocate</div>
+                        <h1 id="hero-heading" class="hero-name">Dileep Tiwari</h1>
+                        <p class="hero-tagline">Fighting for Your Rights with Uncompromising Legal Excellence</p>
+                        <p class="hero-subtitle">Protecting your interests with strategic advocacy, proven expertise, and unwavering dedication to justice</p>
+                        <div class="hero-cta">
+                            <a href="#contact" class="btn btn-primary btn-large">Book Consultation</a>
+                            <a href="#practice-areas" class="btn btn-secondary">View Practice Areas</a>
+                        </div>
+                        <div class="hero-stats">
+                            <div class="hero-stat">
+                                <span class="stat-number">500+</span>
+                                <span class="stat-label">Cases Won</span>
+                            </div>
+                            <div class="hero-stat">
+                                <span class="stat-number">15+</span>
+                                <span class="stat-label">Years Experience</span>
+                            </div>
+                            <div class="hero-stat">
+                                <span class="stat-number">98%</span>
+                                <span class="stat-label">Success Rate</span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="hero-stat">
-                        <span class="stat-number">15+</span>
-                        <span class="stat-label">Years Experience</span>
-                    </div>
-                    <div class="hero-stat">
-                        <span class="stat-number">98%</span>
-                        <span class="stat-label">Success Rate</span>
+                    <div class="hero-image-wrapper">
+                        <div class="hero-image-container">
+                            <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=600&h=800&fit=crop&auto=format" alt="Dileep Tiwari - Legal Advocate" class="hero-image" id="heroImage">
+                            <div class="hero-image-overlay"></div>
+                            <div class="hero-image-note">
+                                <div class="note-icon">⚖️</div>
+                                <h3>Expert Legal Representation</h3>
+                                <p>With over 15 years of dedicated service, I bring extensive experience in civil litigation, business law, and legal consultation. Committed to achieving the best outcomes for every client.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
