--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
                             <div class="hero-image-note">
                                 <div class="note-icon">⚖️</div>
                                 <h3>Expert Legal Representation</h3>
-                                <p>With over 15 years of dedicated service, I bring extensive experience in civil litigation, business law, and legal consultation. Committed to achieving the best outcomes for every client.</p>
+                                <div class="description-scroll">
+                                    <p>With over 15 years of dedicated service, I bring extensive experience in civil litigation, business law, and legal consultation. Committed to achieving the best outcomes for every client.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
